--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,12 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+build_flags = -D esp32dev
+
+[env:pico]
+platform = raspberrypi  
+board = pico
+framework = arduino
+monitor_speed = 115200
+
+lib_deps = Wire
