--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = pico
+
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
@@ -16,9 +20,9 @@ monitor_speed = 115200
 build_flags = -D esp32dev
 
 [env:pico]
-platform = raspberrypi  
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git  
 board = pico
 framework = arduino
+board_build.core = earlephilhower   ;Use core by Earle Philhower, III
 monitor_speed = 115200
-
 lib_deps = Wire
